--- a/src/BiEntroyLib/BiEntropyLib.csproj
+++ b/src/BiEntroyLib/BiEntropyLib.csproj
@@ -43,8 +43,10 @@
   <ItemGroup>
     <Compile Include="BiEntropy.cs" />
     <Compile Include="Constants.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TresBiEntropy.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
