--- a/src/BiEntropyLib.Benchmarks/BiEntropyLib.Benchmarks.csproj
+++ b/src/BiEntropyLib.Benchmarks/BiEntropyLib.Benchmarks.csproj
@@ -223,8 +223,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BenchmarkWithCache.cs" />
-    <Compile Include="BenchmarkWithoutCache.cs" />
+    <Compile Include="Benchmark.cs" />
     <Compile Include="Config.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
